# AiSOC

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS-v1.5.md  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  eval_mitre_accuracy_report.json  install.ps1  install.sh  package.json  pnpm-lock.yaml  turbo.json  uninstall.ps1  uninstall.sh
docs/: QUICK_INSTALL.md  openapi.yaml
hunts/: README.md  (+5 more)
marketplace/: index.json
services/agents/: Dockerfile  pyproject.toml
services/agents/app/: main.py
services/agents/app/api/: contextual.py  copilot.py  hunts.py  investigate.py
services/agents/app/context/: bundle.py
services/agents/app/core/: telemetry.py
services/agents/app/hunt/: __init__.py  engine.py  loader.py  scheduler.py  store.py
services/agents/app/investigator/: forensic_agent.py  orchestrator.py  recon_agent.py  report_writer_agent.py  responder_agent.py  state.py
services/agents/app/playbook/: engine.py
services/agents/app/tools/: mitre_full.py
services/agents/tests/: test_adversary_eval.py  test_context_bundle.py  test_fidelity_harness.py  test_graph_freshness.py  test_hunt_corpus.py  test_investigation_completeness.py  test_mitre_accuracy.py  test_orchestrator_router_stream.py  test_playbook_engine_correctness.py  test_response_quality.py  test_synthetic_telemetry.py
services/agents/tests/eval_data/: adversary_incidents.json  synthetic_hunt_telemetry.jsonl  synthetic_incidents.json  synthetic_telemetry.jsonl
services/agents/tests/fidelity/: cicids_loader.py
(+378 files in other folders)
